# ESRHD-gEOS-JSC2024

./: README.md
Example01/RHD1D_Smooth_EOS_3_RRK_entropycomp_quad/: entropy_decrease.m
Example01/RHD1D_Smooth_EOS_3_entropycomp_quad/: entropy_decrease.m
Example02/RHD1D_Isentropic_entropycomp_RRK_quad/: CMakeLists.txt  entropy_decrease.m
Example02/RHD1D_Isentropic_entropycomp_RRK_quad/data/: tolEntr_1DIsentropic_200_RRK_ES5_T08_SO.txt  tolEntr_1DIsentropic_400_RRK_ES5_T08_SO.txt  tolEntr_1DIsentropic_800_RRK_ES5_T08_SO.txt
Example02/RHD1D_Isentropic_entropycomp_RRK_quad/figure/: RHD_tolEntr_1DIsentr_EC6ES5_IDEOS_RRK_T08.eps
Example02/RHD1D_Isentropic_entropycomp_RRK_quad/src/: ConVPriVEntrV.cpp  Euler1D.cpp  Euler1D.h  Euler1DInit.cpp  EulerEigValVec.cpp  allocateFreeMemory.cpp  setFlux.cpp
Example02/RHD1D_Isentropic_nonES/: contour_plots.m  magnify.m
Example03/RHD1D_density_perturbation_EOS_RRK_SO/: Plot_SSPRK3_RRK3_REF.m  contour_plots.m
Example03/RHD1D_density_perturbation_EOS_entropycomp/: entropy_decrease.m
Example03/RHD1D_density_perturbation_EOS_entropycomp_RRK_SO/: entropy_decrease.m
Example04/RHD1D_blast_wave_EOS_3_RRK_SO/: Plot_SSPRK3_RRK3_REF.m
Example04/RHD1D_blast_wave_EOS_3_entropycomp/: entropy_decrease.m
Example05/RHD1D_RP_1_EOS_RRK_SO/: Plot_SSPRK3_RRK3_REF.m  contour_plots.m
Example05/RHD1D_RP_1_EOS_entropycomp/: entropy_decrease.m
Example05/RHD1D_RP_1_EOS_entropycomp_RRK_SO/: entropy_decrease.m
Example06/RHD1D_RP_2_EOS_3_RRK_SO/: Plot_SSPRK3_RRK3_REF.m  contour_plots.m
Example07/RHD1D_RP_3_nonES_EOS/: contour_plots.m  (+1 more)
(+260 files in other folders)
